Fix: don't wrap type signatures

--- a/static/classy.css
+++ b/static/classy.css
@@ -290,6 +290,10 @@ h6 {
     text-transform: capitalize;
   }
   
+  &.type-signature {
+    white-space: pre;
+  }
+  
   /* Wrap method returns signatures */
   @media (max-width: 480px) {
     dt {
